--- a/lib/crypto/CMakeLists.txt
+++ b/lib/crypto/CMakeLists.txt
@@ -37,3 +37,11 @@ if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.16.0")
 else()
     message(STATUS "CMAKE_UNITY_BUILD : 0 on ${PROJECT_NAME}")
 endif()
+
+install(TARGETS my_crypto
+    ARCHIVE  DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    LIBRARY  DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    RUNTIME  DESTINATION ${CMAKE_INSTALL_BINDIR}
+    PRIVATE_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
