--- a/lib/std/CMakeLists.txt
+++ b/lib/std/CMakeLists.txt
@@ -1,4 +1,5 @@
-cmake_minimum_required(VERSION 3.11)
+cmake_minimum_required (VERSION 3.1 FATAL_ERROR)
+project(std VERSION 0.0.5 DESCRIPTION "Add make_unique_ptr on C++11" LANGUAGES CXX)
 
 project(std)
 
@@ -16,7 +17,4 @@ add_library(std SHARED ${SRCS} ${HEADERS})
 if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.16.0")
     set_target_properties(std PROPERTIES UNITY_BUILD ON)
 	#target_precompile_headers(std PUBLIC ${HEADERS})
-    message(STATUS "CMAKE_UNITY_BUILD : 1 on ${PROJECT_NAME}")
-else()
-    message(STATUS "CMAKE_UNITY_BUILD : 0 on ${PROJECT_NAME}")
 endif()
