--- a/lib/CUDA/CMakeLists.txt
+++ b/lib/CUDA/CMakeLists.txt
@@ -228,19 +228,19 @@ set(EDV_PRIVATE_INCLUDE_DIRECTORIES     kernel/)
 target_include_directories(${PROJECT_NAME} PUBLIC ${EDV_PUBLIC_INCLUDE_DIRECTORIES})
 target_include_directories(${PROJECT_NAME} PRIVATE ${EDV_PRIVATE_INCLUDE_DIRECTORIES})
 
-file(GLOB_RECURSE EDV_INCLUDE_FILES "kernel/*.hpp*")
-file(GLOB_RECURSE EDV_SOURCE_FILES "kernel/*.cpp*")
+#file(GLOB_RECURSE EDV_INCLUDE_FILES "kernel/*.hpp*")
+#file(GLOB_RECURSE EDV_SOURCE_FILES "kernel/*.cpp*")
 
-set_target_properties(my_cuda PROPERTIES
-    PUBLIC_HEADER "${EDV_INCLUDE_FILES}"
+set_target_properties(${PROJECT_NAME} PROPERTIES
+    PUBLIC_HEADER "${HEADERS}"
 )
 
-install(TARGETS my_cuda 
-    ARCHIVE  DESTINATION ${CMAKE_INSTALL_LIBDIR}
-#    LIBRARY  DESTINATION ${CMAKE_INSTALL_LIBDIR} # Nedd more 1 target
-#    RUNTIME  DESTINATION ${CMAKE_INSTALL_BINDIR} # Nedd more 1 target
-    PRIVATE_HEADER DESTINATION source
-    PUBLIC_HEADER DESTINATION include
+install(TARGETS ${PROJECT_NAME} 
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} # Nedd more 1 target
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} # Nedd more 1 target
+#    PRIVATE_HEADER DESTINATION source
+    PUBLIC_HEADER DESTINATION "include/${PROJECT_NAME}"
 )
 
 install(TARGETS vec1d
