--- a/lib/C/libhello/CMakeLists.txt
+++ b/lib/C/libhello/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(libhello C)
+project(hello C)
 
 set(SRCS
 	hello.c
@@ -13,5 +13,14 @@ set(HEADERS
 #add_library(hello_static STATIC ${SRCS} ${HEADERS})
 add_library(hello SHARED ${SRCS} ${HEADERS})
 
-#install (TARGETS hello DESTINATION bin)
-#install (FILES hello.h DESTINATION include)
+set_target_properties(${PROJECT_NAME} PROPERTIES
+    PUBLIC_HEADER "${HEADERS}"
+)
+
+install(TARGETS ${PROJECT_NAME} 
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} # Nedd more 1 target
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} # Nedd more 1 target
+#    PRIVATE_HEADER DESTINATION source
+    PUBLIC_HEADER DESTINATION "include/${PROJECT_NAME}"
+)
