--- a/lib/crypto/CMakeLists.txt
+++ b/lib/crypto/CMakeLists.txt
@@ -38,10 +38,14 @@ else()
     message(STATUS "CMAKE_UNITY_BUILD : 0 on ${PROJECT_NAME}")
 endif()
 
-install(TARGETS my_crypto
-    ARCHIVE  DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    LIBRARY  DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    RUNTIME  DESTINATION ${CMAKE_INSTALL_BINDIR}
-    PRIVATE_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+set_target_properties(${PROJECT_NAME} PROPERTIES
+    PUBLIC_HEADER "${HEADERS}"
+)
+
+install(TARGETS ${PROJECT_NAME} 
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} # Nedd more 1 target
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} # Nedd more 1 target
+#    PRIVATE_HEADER DESTINATION source
+    PUBLIC_HEADER DESTINATION "include/${PROJECT_NAME}"
 )
